fix: reduce spacing

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -46,7 +46,7 @@
 		@apply border border-black text-black hover:bg-accent focus:outline-none focus:ring-2 focus:ring-accent focus:ring-opacity-75 lg:text-2xl;
 	}
 	.spacing-heading-body {
-		@apply mb-8 lg:mb-16;
+		@apply mb-8 lg:mb-12;
 	}
 	.spacing-heading-subheading {
 		@apply mb-2;
